--- a/main/webapp/WEB-INF/web.xml
+++ b/main/webapp/WEB-INF/web.xml
@@ -29,8 +29,8 @@ version="2.4">
         <url-pattern>/EBookList/index.jsp</url-pattern>
     </filter-mapping>
 
-    <!-- サーブレットの設定 -->
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>CommentDeleteServlet</servlet-name>
         <servlet-class>servlet.CommentDeleteServlet</servlet-class>
    </servlet> 
@@ -39,7 +39,8 @@ version="2.4">
         <servlet-name>CommentDeleteServlet</servlet-name>
         <url-pattern>/EBookList/CommentDelete</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>CommentPostServlet</servlet-name>
         <servlet-class>servlet.CommentPostServlet</servlet-class>
    </servlet> 
@@ -48,7 +49,8 @@ version="2.4">
         <servlet-name>CommentPostServlet</servlet-name>
         <url-pattern>/EBookList/CommentPost</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>servlet.LoginServlet</servlet-class>
    </servlet> 
@@ -57,7 +59,8 @@ version="2.4">
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/EBookList/Login</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>servlet.LogoutServlet</servlet-class>
    </servlet> 
@@ -66,7 +69,8 @@ version="2.4">
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/EBookList/Logout</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>MyPageServlet</servlet-name>
         <servlet-class>servlet.MyPageServlet</servlet-class>
    </servlet> 
@@ -75,7 +79,8 @@ version="2.4">
         <servlet-name>MyPageServlet</servlet-name>
         <url-pattern>/EBookList/MyPage</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>ProductDetailServlet</servlet-name>
         <servlet-class>servlet.ProductDetailServlet</servlet-class>
    </servlet> 
@@ -84,7 +89,8 @@ version="2.4">
         <servlet-name>ProductDetailServlet</servlet-name>
         <url-pattern>/EBookList/ProductDetail</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>PurchaseServlet</servlet-name>
         <servlet-class>servlet.PurchaseServlet</servlet-class>
    </servlet> 
@@ -93,7 +99,8 @@ version="2.4">
         <servlet-name>PurchaseServlet</servlet-name>
         <url-pattern>/EBookList/Purchase</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>ReadingEBookServlet</servlet-name>
         <servlet-class>servlet.ReadingEBookServlet</servlet-class>
    </servlet> 
@@ -102,7 +109,8 @@ version="2.4">
         <servlet-name>ReadingEBookServlet</servlet-name>
         <url-pattern>/EBookList/ReadingEBook</url-pattern>
    </servlet-mapping>
-    <servlet> 
+   <!-- サーブレットの設定 -->
+   <servlet> 
         <servlet-name>UserRegisterServlet</servlet-name>
         <servlet-class>servlet.UserRegisterServlet</servlet-class>
    </servlet> 
@@ -110,5 +118,15 @@ version="2.4">
    <servlet-mapping>
         <servlet-name>UserRegisterServlet</servlet-name>
         <url-pattern>/EBookList/UserRegister</url-pattern>
+   </servlet-mapping>
+   <!-- サーブレットの設定 -->
+   <servlet> 
+        <servlet-name>ChangeUserInfoServlet</servlet-name>
+        <servlet-class>servlet.ChangeUserInfoServlet</servlet-class>
+   </servlet> 
+   <!-- サーブレットの名前でservletタグのクラスと、URLを関連付ける -->
+   <servlet-mapping>
+        <servlet-name>ChangeUserInfoServlet</servlet-name>
+        <url-pattern>/EBookList/ChangeUserInfo</url-pattern>
    </servlet-mapping>
 </web-app>
